objects/OUV_Fines_and_Contraventions__c.object
<CustomObject>
    <description>Object that deals with Fines and Contraventions</description>
    <label>OUV Fines and Contraventions</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>OUV Fines and Contraventions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Fines and Contraventions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>OUV_Type__c</fullName>
        <description>The type of Fine written.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCN</fullName>
                </value>
                <value>
                    <fullName>NOIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Amount__c</fullName>
        <description>Amount of the Fine</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUV_Due_Date__c</fullName>
        <description>Due Date of the Fine</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if an Email is to be sent.</description>
        <label>OUV Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Reservation.</description>
        <label>OUV Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>OUV Fines and Contraventions</relationshipLabel>
        <relationshipName>OUV_Fines_and_Contraventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Date_of_Fine__c</fullName>
        <description>The Date in which the Fine was written.</description>
        <label>Date of Fine</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OUV_Reference_Number__c</fullName>
        <description>The Reference Number for the Fine.</description>
        <label>Reference Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OUV_Send_Email_Message__c</fullName>
        <formula>$Label.OUV_Fines_and_Contraventions_Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Email Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Registration_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to OUV Vehicle.</description>
        <label>OUV Vehicle</label>
        <referenceTo>OUV_Vehicle__c</referenceTo>
        <relationshipLabel>OUV Fines and Contraventions</relationshipLabel>
        <relationshipName>OUV_Fines_and_Contraventions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Fleet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User.</description>
        <label>Booking Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fines_and_Contraventions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Fleet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User.</description>
        <label>Vehicle Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Fines_and_Contraventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Reminder_Received_Date__c</fullName>
        <description>Reminder of the received date.</description>
        <label>Reminder Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_JLR_Internal_Contact_Email__c</fullName>
        <description>Email of the JLR internal contact.</description>
        <label>JLR Internal Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Booking_Fleet_Manager_Email__c</fullName>
        <formula>OUV_Booking_Fleet_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Booking Fleet Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Fleet_Manager_Email__c</fullName>
        <formula>OUV_Vehicle_Fleet_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUV Vehicle Fleet Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Registration_Number__c</fullName>
        <formula>OUV_Registration_Number__r.OUV_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_User_Email_Encrypted__c</fullName>
        <label>Vehicle User Email</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <sharingReasons>
        <fullName>OUV_Fine_Fleet_Members__c</fullName>
        <label>Fleet Members</label>
    </sharingReasons>
</CustomObject>